Checking Github Actions Deployment with Extra Demo API 6
